Fix H1 H2 underline collapses

--- a/core/static/core/assets/css/main.css
+++ b/core/static/core/assets/css/main.css
@@ -235,14 +235,14 @@ em, i {
 }
 
 p {
-  margin: 0 0 2em 0;
+  margin: 0 0 1em 0;
 }
 
 h1 {
   font-size: 2.5em;
   font-weight: 700;
   line-height: 1.3;
-  margin: 0 0 1em 0;
+  margin: 0 0 0.5em 0;
   letter-spacing: 0.06em;
 }
 h1 a {
@@ -251,7 +251,7 @@ h1 a {
 @media screen and (max-width: 736px) {
   h1 {
     font-size: 2em;
-    margin: 0 0 1em 0;
+    margin: 0 0 0.5em 0;
   }
 }
 @media screen and (max-width: 360px) {
@@ -263,7 +263,7 @@ h1 a {
 h2, h3, h4, h5, h6 {
   font-weight: 900;
   line-height: 1.5;
-  margin: 0 0 2em 0;
+  margin: 0 0 1em 0;
   text-transform: uppercase;
   letter-spacing: 0.15em;
 }
@@ -273,14 +273,16 @@ h2 a, h3 a, h4 a, h5 a, h6 a {
 
 h2 {
   font-size: 1.6em;
-  display: inline-block;
-  border-bottom: 2px solid #7FBAB4;
+  text-decoration: underline solid #7FBAB4 2px;
+  text-underline-position: under;
+  text-underline-offset: 0.1em;
 }
 
 h3 {
   font-size: 1.5em;
-  display: inline-block;
-  border-bottom: 2px solid #7FBAB4;
+  text-decoration: underline solid #7FBAB4 1px;
+  text-underline-position: under;
+  text-underline-offset: 0.1em;
 }
 
 h4 {
@@ -315,8 +317,8 @@ sup {
 blockquote {
   border-left: solid 4px #F9DEB2;
   font-style: italic;
-  margin: 0 0 2em 0;
-  padding: 0.5em 0 0.5em 2em;
+  margin: 0 0 1em 0;
+  padding: 0.25em 0 0.25em 1em;
 }
 
 code {
@@ -333,7 +335,7 @@ pre {
   -webkit-overflow-scrolling: touch;
   font-family: "Courier New", monospace;
   font-size: 0.9em;
-  margin: 0 0 2em 0;
+  margin: 0 0 1em 0;
 }
 pre code {
   display: block;
@@ -345,7 +347,7 @@ pre code {
 hr {
   border: 0;
   border-bottom: solid 1px #F9DEB2;
-  margin: 2em 0;
+  margin: 1em 0;
 }
 
 .align-left {
@@ -1476,7 +1478,7 @@ section.special, article.special {
 }
 
 header p {
-  margin-top: -1em;
+  margin-top: -0.5em;
 }
 @media screen and (max-width: 736px) {
   header p {
@@ -1547,7 +1549,7 @@ header p {
 /* List */
 ol {
   list-style: decimal;
-  margin: 0 0 2em 0;
+  margin: 0 0 1em 0;
   padding-left: 1.25em;
 }
 ol li {
@@ -1556,7 +1558,7 @@ ol li {
 
 ul {
   list-style: circle;
-  margin: 0 0 2em 0;
+  margin: 0 0 1em 0;
   padding-left: 1em;
 }
 ul li {
@@ -1576,15 +1578,15 @@ ul.alt li:first-child {
 }
 
 dl {
-  margin: 0 0 2em 0;
+  margin: 0 0 1em 0;
 }
 dl dt {
   display: block;
   font-weight: 900;
-  margin: 0 0 1em 0;
+  margin: 0 0 0.5em 0;
 }
 dl dd {
-  margin-left: 2em;
+  margin-left: 1em;
 }
 
 /* Actions */
@@ -1595,11 +1597,11 @@ ul.actions {
   display: flex;
   cursor: default;
   list-style: none;
-  margin-left: -1em;
+  margin-left: -0.5em;
   padding-left: 0;
 }
 ul.actions li {
-  padding: 0 0 0 1em;
+  padding: 0 0 0 0.5em;
   vertical-align: middle;
 }
 ul.actions.special {
@@ -1621,13 +1623,13 @@ ul.actions.stacked {
   margin-left: 0;
 }
 ul.actions.stacked li {
-  padding: 1.3em 0 0 0;
+  padding: 0.65em 0 0 0;
 }
 ul.actions.stacked li:first-child {
   padding-top: 0;
 }
 ul.actions.fit {
-  width: calc(100% + 1em);
+  width: calc(100% + 0.5em);
 }
 ul.actions.fit li {
   -moz-flex-grow: 1;
@@ -1664,7 +1666,7 @@ ul.actions.fit.stacked {
     -webkit-flex-shrink: 1;
     -ms-flex-shrink: 1;
     flex-shrink: 1;
-    padding: 1em 0 0 0;
+    padding: 0.5em 0 0 0;
     text-align: center;
     width: 100%;
   }
@@ -1695,7 +1697,7 @@ ul.icons {
   cursor: default;
   list-style: none;
   padding-left: 0;
-  margin: -1em 0 2em -1em;
+  margin: -1em 0 1em -1em;
 }
 ul.icons li {
   display: inline-block;
@@ -1704,7 +1706,7 @@ ul.icons li {
 
 /* Form */
 form {
-  margin: 0 0 2em 0;
+  margin: 0 0 1em 0;
   overflow-x: hidden;
 }
 form > :last-child {
@@ -1719,8 +1721,8 @@ form > .fields {
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  width: calc(100% + 3em);
-  margin: -1.5em 0 2em -1.5em;
+  width: calc(100% + 1.5em);
+  margin: -0.75em 0 1em -0.75em;
 }
 form > .fields > .field {
   -moz-flex-grow: 0;
@@ -1731,35 +1733,35 @@ form > .fields > .field {
   -webkit-flex-shrink: 0;
   -ms-flex-shrink: 0;
   flex-shrink: 0;
-  padding: 1.5em 0 0 1.5em;
-  width: calc(100% - 1.5em);
+  padding: 0.75em 0 0 0.75em;
+  width: calc(100% - 0.75em);
 }
 form > .fields > .field.half {
-  width: calc(50% - 0.75em);
+  width: calc(50% - 0.375em);
 }
 form > .fields > .field.third {
-  width: calc(33.3333333333% - 0.5em);
+  width: calc(33.3333333333% - 0.25em);
 }
 form > .fields > .field.quarter {
-  width: calc(25% - 0.375em);
+  width: calc(25% - 0.1875em);
 }
 @media screen and (max-width: 480px) {
   form > .fields {
-    width: calc(100% + 3em);
-    margin: -1.5em 0 2em -1.5em;
+    width: calc(100% + 1.5em);
+    margin: -0.75em 0 1em -0.75em;
   }
   form > .fields > .field {
-    padding: 1.5em 0 0 1.5em;
-    width: calc(100% - 1.5em);
+    padding: 0.75em 0 0 0.75em;
+    width: calc(100% - 0.75em);
   }
   form > .fields > .field.half {
-    width: calc(100% - 1.5em);
+    width: calc(100% - 0.75em);
   }
   form > .fields > .field.third {
-    width: calc(100% - 1.5em);
+    width: calc(100% - 0.75em);
   }
   form > .fields > .field.quarter {
-    width: calc(100% - 1.5em);
+    width: calc(100% - 0.75em);
   }
 }
 
@@ -1767,7 +1769,7 @@ label {
   display: block;
   font-size: 0.9em;
   font-weight: 900;
-  margin: 0 0 1em 0;
+  margin: 0 0 0.5em 0;
 }
 
 input[type=text],
@@ -1912,7 +1914,7 @@ input[type=radio] + label:before {
 .box {
   border-radius: 4px;
   border: solid 1px #F9DEB2;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
   padding: 1.5em;
 }
 .box > :last-child,
@@ -1955,7 +1957,7 @@ input[type=radio] + label:before {
 }
 .image.fit {
   display: block;
-  margin: 0 0 2em 0;
+  margin: 0 0 1em 0;
   width: 100%;
 }
 .image.fit img {
@@ -1963,7 +1965,7 @@ input[type=radio] + label:before {
 }
 .image.main {
   display: block;
-  margin: 0 0 3em 0;
+  margin: 0 0 1.5em 0;
   width: 100%;
 }
 .image.main img {
@@ -1971,7 +1973,7 @@ input[type=radio] + label:before {
 }
 @media screen and (max-width: 736px) {
   .image.main {
-    margin: 0 0 2em 0;
+    margin: 0 0 1em 0;
   }
 }
 
@@ -1982,7 +1984,7 @@ input[type=radio] + label:before {
 }
 
 table {
-  margin: 0 0 2em 0;
+  margin: 0 0 1em 0;
   width: 100%;
 }
 table tbody tr {
@@ -2519,7 +2521,7 @@ body.is-touch .tiles article .image::before {
   font-size: 1.5em;
   font-weight: 900;
   line-height: 1.5;
-  margin: 0 0 2em 0;
+  margin: 0 0 1em 0;
   text-transform: uppercase;
   letter-spacing: 0.15em;
 }
@@ -2540,7 +2542,7 @@ body.is-touch .tiles article .image::before {
 }
 #menu > .inner > ul {
   list-style: none;
-  margin: 0 0 1em 0;
+  margin: 0 0 0.5em 0;
   padding: 0;
 }
 #menu > .inner > ul > li {
@@ -2660,11 +2662,11 @@ body.is-menu-visible #menu .close {
 /* Main */
 #main {
   background-color: #ffffff;
-  padding: 8em 0 1em 0;
+  padding: 8em 0 2em 0;
 }
 @media screen and (max-width: 736px) {
   #main {
-    padding: 7em 0 1em 0;
+    padding: 7em 0 2em 0;
   }
 }
 
@@ -2738,11 +2740,12 @@ table.openings .bordered-right {
 }
 #massage-description .title-duration-wrapper h1 {
   flex: 1 1 auto;
+  text-decoration: none;
 }
 #massage-description .title-duration-wrapper h2 {
   margin-bottom: 0.2em;
   line-height: 2.3;
-  border-bottom: none;
+  text-decoration: none;
 }
 #massage-description hr {
   margin: 0 0 1.5em;
@@ -2757,9 +2760,6 @@ table.openings .bordered-right {
 #massage-description h3 {
   letter-spacing: 0.15em;
   padding: 0.2em 0;
-  display: inline-block;
-  border-bottom: 2px solid #7FBAB4;
-  margin-bottom: 0.8em;
 }
 #massage-description p {
   text-align: justify;
@@ -2768,7 +2768,7 @@ table.openings .bordered-right {
 
 /* Footer */
 #footer {
-  padding: 3em 0 1em 0;
+  padding: 3em 0 2em 0;
   background-color: #7FBAB4;
   color: #0C354D;
 }
